# notifier

./: .env  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.sh  migrate.sh  openAPI.json  publish_clients.sh  runSingleClientGenerator.sh  setupDevDb.sh
clients/: openAPI.json
clients/go/: README.md  api_crate.go  client.go  configuration.go  go.mod  model_add_email_channel_body.go  model_add_telegram_channel_body.go  model_remove_channel_body.go  model_send_notification_body.go  response.go  utils.go
clients/go/api/: openapi.yaml
clients/go/docs/: CrateApi.md  SendNotificationBody.md
clients/kotlin/: README.md
clients/kotlin/.openapi-generator/: FILES
clients/kotlin/docs/: AddEmailChannelBody.md  AddTelegramChannelBody.md  CrateApi.md  RemoveChannelBody.md  SendNotificationBody.md
clients/python/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  setup.py  tox.ini
clients/python/.openapi-generator/: FILES
clients/python/docs/: CrateApi.md  SendNotificationBody.md
clients/python/openapi_client/: __init__.py  api_client.py  configuration.py
clients/rust/: Cargo.toml  README.md
clients/rust/docs/: GetTelegramChatIdBody.md  SendNotificationBody.md
clients/typescript-fetch/: runtime.ts
clients/typescript-fetch/.openapi-generator/: FILES
clients/typescript-fetch/apis/: CrateApi.ts  index.ts
clients/typescript-fetch/models/: AddEmailChannelBody.ts  index.ts  (+3 more)
migrations/: 20220529124800_channels.sql
src/: config.rs  generate_openapi.rs  main.rs  server.rs
src/server/: server.rs
src/services/: email.rs  mod.rs  service.rs  telegram.rs
(+97 files in other folders)
