[package]
name = "notifier"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "generate-openapi"
path = "./src/generate_openapi.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
tokio = { version =  "1.18", features = ["full"] }
lettre = "0.10.0-rc.6"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.53"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","postgres" ,"offline"] }
axum = "0.5.6"
axum-macros = "0.2.2"
config = "0.13.1"
utoipa = {version = "1.1.0" }

# [targets."generate-openapi".dependencies]
testcontainers = "0.14.0"